Enable java 21 preview features